// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimilarityScore renders correctly for type = 'compact' 1`] = `
<SimilarityScore
  similarityScore={0.2}
  type="compact"
  user={
    Object {
      "auth_token": "baz",
      "name": "test",
    }
  }
>
  <div
    className="similarity-score compact"
  >
    <div
      aria-label="Similarity Score"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={20}
      className="progress"
      role="progressbar"
      tabIndex={0}
    >
      <div
        className="progress-bar progress-bar-danger"
        style={
          Object {
            "width": "20%",
          }
        }
      />
    </div>
    <p
      className="small"
    >
      2
      /10
    </p>
  </div>
</SimilarityScore>
`;

exports[`SimilarityScore renders correctly for type = 'regular' 1`] = `
<SimilarityScore
  similarityScore={0.2}
  type="regular"
  user={
    Object {
      "auth_token": "baz",
      "name": "test",
    }
  }
>
  <div
    className="similarity-score regular"
  >
    <div
      aria-label="Similarity Score"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={20}
      className="progress"
      role="progressbar"
      tabIndex={0}
    >
      <div
        className="progress-bar progress-bar-danger"
        style={
          Object {
            "width": "20%",
          }
        }
      />
    </div>
    <p>
      Your compatibility with 
      test
       is 
      2
      /10
    </p>
  </div>
</SimilarityScore>
`;
